--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Donor Registration</title>
-	<link rel="stylesheet" type="text/css" href="student-styles.css">
+	<link rel="stylesheet" type="text/css" href="intro-css.css">
 	<meta name="viewport" content="width=device-width , initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap" rel="stylesheet">
